[package]
name = "nextcloud-api-rs"
version = "0.1.0"
authors = ["Arthur Hugon <dev@planchon.xyz>"]
edition = "2018"

[dependencies]
log = "0.4.6"
badlog = "1.1.1"
serde = "1.0.92"
serde_json = "1.0.39"
headless_chrome = { git = "https://github.com/joxcat/rust-headless-chrome.git" }
base64 = "0.10.1"
clap = "2.33.0"
simple-error = "0.2.0"
rand = "0.6"
openssl = "0.10"
openssl-probe = "0.1"
arthur-hugon-tools = { git = "https://github.com/joxcat/arthur-hugon-tools.git", features = ["security","urlenc"] }
